--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.5.5",
     "@react-navigation/native": "6.0.0",
     "@react-navigation/stack": "5.14.9",
+    "@reduxjs/toolkit": "1.8.6",
     "expo": "^46.0.13",
     "expo-constants": "~13.2.4",
     "expo-status-bar": "^1.4.0",
@@ -23,9 +24,9 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "redux": "4.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "8.0.4",
-    "@reduxjs/toolkit": "1.8.6"
+    "redux": "4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
